2014-04-27  Dima Kogan  <dima@secretsauce.net>

	* src/gplt_x11.c: Fix off-by-one error in selection string.
	Allow clipboard contents to be retrieved more than once.

2014-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_steps): Avoid overflow in clipping code.
	==> Reverted in favor of fixing the clipping code itself.

	* src/gadgets.c (clip_line): It is not safe to use (A*B >= 0) as a
	substitute for the test (sign(A) != sign(B)).
	It fails when A and B are integers and their product overflows.
	Bugs #1390, #1392	See also Bug #1358

	* src/stdfn.h: Define a sgn() function.

	* src/graphics.c: Use sgn() function to defint samesign().

	* src/mouse.c: No longer need a local definition of sgn().

2014-04-26  Dima Kogan  <dima@secretsauce.net>

	* src/mouse.c (do_zoom rescale_around_mouse):  Handle various conditions
	that caused zooming around the current mouse position to fail.
	Bug #1380

2014-04-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse):  Disallow defining "set lt N lt M".
	This used to mean "define effective linetype N to be the hidden device
	specific linetype M", except that in other contexts it meant "use 
	effective linetype M rather than effective linetype N". Version 5
	distinguishes between color and dashpatten, so require an explicit 
	command to set one or both rather than an ambiguous old-style request.

	* src/save.c (save_pm3dcolor save_linetype):  Save special linetypes
	by keyword rather than a magic number (e.g. lt bgnd rather than -3).

2014-04-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gp_types.h src/misc.c (lp_parse) src/misc.h src/plot2d.c
	src/plot3d.c src/set.c:  Revise the parameters passed to lp_parse() so
	that the legal options can vary depending on the identity of the caller.

	* src/term.c (test_term): Reset to default font after Bold/Italic test.
	Bug #1387

2014-04-24  Dima Kogan  <dima@secretsauce.net>
